--- a/chatbot.html
+++ b/chatbot.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html><html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  </head>
   <body>
   <div style="overflow:auto; -webkit-overflow-scrolling:touch; width:360px; height:600px;">
     <iframe src="https://web.powerva.microsoft.com/environments/Default-97b5229a-f412-4dfc-93cd-b4a1d325f1cb/bots/Default_copilot1/webchat?__version__=2" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;"></iframe>
