Update meta of chatbot.html

--- a/chatbot.html
+++ b/chatbot.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html><html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="연합우주 챗봇">
+    <link rel="icon" type="image/x-icon" href="https://bot-framework.azureedge.net/bot-icons-v1/fb1a6ae9-2925-47cf-9231-b8cd1077d89d_61J9CzwlAMnR37So86B6pf4oQ9c7D9vBwfB3J5ChA2vF00.png">
+    <title>연합우주 챗봇</title>
   </head>
   <body>
   <div style="overflow:auto; -webkit-overflow-scrolling:touch; width:360px; height:600px;">
